# rknn-cpp-Multithreading

./: .gitignore  CMakeLists.txt  README.md  build-linux_RK3588.sh  performance.sh
include/: ThreadPool.hpp  coreNum.hpp  rkYolov5s.hpp  rknnPool.hpp
src/: main.cc  postprocess.cc  preprocess.cc  rkYolov5s.cc
